# fabric-rs

./: Cargo.toml  Makefile  README.md  create_config.sh
.vim/: coc-settings.json
conf-rs/: Cargo.toml
configs/: access1.yaml  access2.yaml  fabric11.yaml  fabric12.yaml  fabric21.yaml  fabric22.yaml  host1.yaml  host2.yaml  leaf1.yaml  leaf2.yaml  spine1.yaml  spine2.yaml
disco-rs/: Cargo.toml
disco-rs/src/: lib.rs
fabric-rs/: Cargo.toml
fabric-rs-common/: Cargo.toml
fabric-rs-common/src/: lib.rs
fabric-rs-config/: Cargo.toml
fabric-rs-config/src/: lib.rs
fabric-rs-ebpf/: Cargo.toml
fabric-rs-ebpf/src/: main.rs
fabric-rs-userspace/: Cargo.toml
fabric-rs-userspace/src/: lib copy.rs.bak  lib.rs
fabric-rs-userspace/src/af_xdp/: af_xdp.rs  mod.rs
fabric-rs-userspace/src/cli/: cli.rs
fabric-rs-userspace/src/interface/: interface.rs
fabric-rs-userspace/src/send_receive/: mod.rs  send_receive.rs
fabric-rs-userspace/src/state/: mod.rs  state.rs
fabric-rs-userspace/src/state/table/: mod.rs  table.rs
fabric-rs-userspace/src/state/table/forwarding_table/: forwarding_table.rs  mod.rs
fabric-rs-userspace/src/state/table/neighbor_table/: mod.rs  neighbor_table.rs
fabric-rs-userspace/src/state/table/routing_table/: mod.rs  routing_table.rs
fabric-rs/.cargo/: config.toml
fabric-rs/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
